Remove filter_tests table in cleanup