@@ -3,8 +3,9 @@ FROM maven:3.6.1-jdk-8-alpine AS MAVEN_BUILD
 # copy the pom and src code to the container
 COPY ./ ./
 
-# package our application code, don't run tests since Maven throws java.lang.OutOfMemoryError: GC overhead limit exceeded
-RUN export MAVEN_OPTS="-Xmx2048M -Xss128M -XX:MaxPermSize=2048M -XX:+CMSClassUnloadingEnabled -XX:-UseGCOverheadLimit" && ./mvnw package -Dmaven.test.skip=true
+# package our application code, we optimize with extra JVM flags and disable tests because Maven throws java.lang.OutOfMemoryError: GC overhead limit exceeded
+RUN mvn dependency:resolve
+RUN export MAVEN_OPTS="-Xmx2048M -Xss128M -XX:+CMSClassUnloadingEnabled" && mvn package -Dmaven.test.skip=true
 
 # the second stage of our build will use open jdk 8 on alpine 3.9
 FROM openjdk:8-jre-alpine3.9
